# substratefighters

./: README.md
substratefighters/: Cargo.toml
substratefighters-ui/src/: app.jsx
substratefighters-ui/src/FighterCards/: index.jsx
substratefighters-ui/src/FighterCards/img/: index.jsx
substratefighters/runtime/: Cargo.toml
substratefighters/runtime/src/: lib.rs  substratefighters.v1.rs  substratefighters.v2.rs
substratefighters/runtime/wasm/: Cargo.toml  build.sh
substratefighters/runtime/wasm/src/: lib.rs
substratefighters/src/: chain_spec.rs  main.rs  service.rs
substratekitties-ui/src/: app.jsx
substratekitties-ui/src/KittyCards/: index.jsx
substratekitties/runtime/src/: substratekitties.original.rs  substratekitties.rs  substratekitties.storage-upgrade.rs
